[package]
name = "gnaw"
version = "0.1.0"
description = "An MPD TUI client"
authors = ["William Culhane <sxroka@gmail.com>"]
keywords = ["mpd"]
license = "MIT"
repository = "https://github.com/LEARAX57H/gnaw"
edition = "2018"

[lib]
name = "gnaw"

[[bin]]
name = "gnaw"

[dependencies]
tui = "0.6.2"
termion = "1.5.3"
owning_ref = "0.4.0"
