[package]
name = "gnaw"
version = "0.1.0"
authors = ["William Culhane <sxroka@gmail.com>"]
edition = "2018"
description = "An MPD TUI client"
repository = "https://github.com/LEARAX57H/gnaw"
license = "MIT"
keywords = ["mpd"]
categories = ["command-line-utilities", "api-bindings"]

[lib]
name = "gnaw"

[[bin]]
name = "gnaw"

[dependencies]
tui = "0.8.0"
termion = "1.5.5"
chrono = "0.4.11"
regex = "1.3.9"
lazy_static = "1.4.0"
